--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <!-- FORM -->
 
     <div class="form">
-      <h3>Sign up to for a consultation</h3>
+      <h3>Sign up for a consultation</h3>
       <h3>______________________________</h3>
     </div>
 
