--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <h2>______________________________</h2>
       <br>
         <div class="routine-checklist">
-          <p>Use this to-do list to write down your routine then check the list out after you're done with any of the steps. You can also set the time--whether it's morning or night to keep yourself organized.</p>
+          <p>Use this to-do list to write down your routine then check the list out after you're done with any of the steps. You can also set the time--whether it's morning or night to keep yourself organized. You can also use this as a shopping list when you're planning to buy any skin care products.</p>
         </div>
 
       <br>
